# EmergingPPO

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
EmeComAtScale_Replica/: data.py  losses.py  main.py  measures.py  modeling.py  models.py  run.sge  run.sh  run_10p.sge  test.py  utils.py  utils_logs.py
EmeComAtScale_Replica/wandb/: latest-run
EmeComAtScale_Replica/wandb/offline-run-20240223_161103-e7ypl63n/: run-e7ypl63n.wandb
EmeComAtScale_Replica/wandb/offline-run-20240223_161103-e7ypl63n/files/: wandb-metadata.json
EmeComAtScale_Replica/wandb/offline-run-20240223_161352-5yefvgpl/: run-5yefvgpl.wandb
EmeComAtScale_Replica/wandb/offline-run-20240223_161352-5yefvgpl/files/: wandb-metadata.json
EmeComAtScale_Replica/wandb/offline-run-20240223_161555-setfwju7/: run-setfwju7.wandb
EmeComAtScale_Replica/wandb/offline-run-20240223_161555-setfwju7/files/: wandb-metadata.json
EmeComAtScale_Replica/wandb/run-20240223_160235-3w70c8fy/: run-3w70c8fy.wandb
EmeComAtScale_Replica/wandb/run-20240223_160404-e78nlqnf/: run-e78nlqnf.wandb
EmeComAtScale_Replica/wandb/run-20240223_160522-oavsuyhu/: run-oavsuyhu.wandb
Nico Exps/: ppo_main.py  prov.py
scripts/: format.sh  install.sh  run.sge  run_10p.sge
src/: data.py  losses.py  main.py  models.py  saver.py  utils.py  utils_logs.py
src/EmergingPPO/: __init__.py  args.py  data.py  logging_callbacks.py  losses.py  main.py  measures.py  models.py  saver.py  utils.py  utils_logs.py
tests/: test_callbacks.py  test_data.py  test_loss.py  test_models.py  test_saving_loading.py
(+8 files in other folders)
