[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "EmergingPPO"
version = "0.0.1"
description = "Emergent communication with Transformers"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Nicolo' Brandizzi"},
    {name = "Lukas Galke"}
]
dependencies = [
    "torch >= 2.3.0",
    "transformers >= 4.40.2",
    "datasets >= 2.19.1",
    "wandb >= 0.17.0",
    "EGG @ git+https://github.com/nicofirst1/EGG.git",

]


[project.optional-dependencies]
dev=["black>=24.4.2", "isort>=5.13.2", "pytest>=6.2.4"]


[tool.setuptools.packages.find]
where = ["src"]